create UI Button based off the Field instances.